# TAPIA

./: .gitignore  main.py  pyproject.toml  streamlit_app.py  tapia_history.db
.streamlit/: config.toml
ai/: gpt_client.py
auth/: auth.py
core/: lab_analyzer.py  models.py  patient_report.py  triage.py  wearable.py
db/: database.py
tapia/: .env.example  config.yaml  requirements.txt  streamlit_app.py
tapia/.streamlit/: config.toml
tapia/compliance/: audit.py  gdpr.py
tapia/core/: config.py  lab_analyzer.py  report.py
tapia/db/: crypto.py  database.py
tapia/export/: pdf.py
tapia/tests/: test_db.py  test_streamlit_pages.py  test_wearable_history.py
tapia/ui/: app.py
tapia/ui/streamlit_pages/: page_about.py  page_compliance.py  page_history.py  page_login.py  page_patient_report.py  page_patients.py  page_triage.py
tapia/wearables/: adapter_apple.py  adapter_apple_xml.py  adapter_fitbit.py  adapter_withings.py
tests/: conftest.py  test_compliance.py  test_report.py  test_triage.py  test_wearable.py  test_wearable_adapters.py
ui/: session.py
ui/streamlit_pages/: page_db_history.py  page_triage.py  page_users.py
wearables/: adapter_apple_xml.py  adapter_garmin.py  adapter_tapia.py  base.py  detector.py
