[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tapia"
version = "1.2.0"
description = "TAPIA – Triaje Automatizado por IA"
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pillow>=10.0",
    "reportlab>=4.0",
    "openai>=1.0",
    "streamlit>=1.36",
    "plotly>=5.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
desktop   = ["pillow>=10.0"]   # solo necesario para la UI Tkinter
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
tapia-web     = "streamlit:main"   # streamlit run streamlit_app.py
tapia-desktop = "tapia.main:main"  # interfaz Tkinter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["tapia*"]
